# ai-playwright-framework

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  README.zh-CN.md  SECURITY.md  check_duplicates.py  conftest.py  pyproject.toml  pytest.ini  test_runner.py  validate_yaml_schema.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
ai_playwright/: __init__.py  case_utils.py  constants.py  project_paths.py  pytest_plugin.py  runner.py  test_case_executor.py  yaml_schema.py
ai_playwright/ai_generation/: __init__.py  case_generator.py  harness.py  pipeline.py  project_context.py
ai_playwright/ai_runtime/: __init__.py  agent_case_executor.py  agent_plan_cache.py  agent_text_utils.py  ai_cache_store.py  cache_scope.py  config.py  contracts.py  element_store.py  native_observe.py  payload_compactor.py  playwright_selectors.py  provider.py  redaction.py  semantic_terms.py  smart_resolver.py
ai_playwright/cli/: __init__.py  common.py  generate_case.py  init_project.py  install_browser.py  run_case.py
ai_playwright/page_objects/: base_page.py
ai_playwright/step_actions/: action_registry.py  action_result.py  action_types.py  command_executor.py  expression_evaluator.py  flow_control.py  module_handler.py  network_monitor.py  step_executor.py  utils.py  wait_policy.py
ai_playwright/step_actions/commands/: __init__.py  assertion_commands.py  file_commands.py  interaction_commands.py  misc_commands.py  navigation_commands.py  network_commands.py  storage_commands.py  wait_commands.py  window_commands.py
ai_playwright/templates/config/: ai_config.yaml  env_config.yaml
ai_playwright/utils/: __init__.py  config.py  logger.py  token_usage.py  variable_manager.py  yaml_handler.py
config/: ai_config.yaml  constants.py  env_config.yaml
docs/: native_ai_resolver_plan.md  python_native_resolver_technical_solution.md  条件分支使用指南.md  高级功能详解.md
docs/articles/ai-generated-tests-verification-first/: README.md  article-brief.yaml  fact-ledger.yaml  qa-report.md  reproduce.md  source-map.md  visual-plan.yaml  wechat-draft.md
generation_specs/: demo_explicit.yaml  saucedemo.yaml  saucedemo_ai.yaml
generation_specs/demo/: baidu_search_ai.yaml  saucedemo_ai.yaml
page_objects/: __init__.py  base_page.py
scripts/: install_playwright_chromium.py
src/: case_utils.py  runner.py  test_case_executor.py  test_step_executor.py  utils.py  yaml_schema.py
src/ai_generation/: __init__.py  case_generator.py  harness.py  pipeline.py  project_context.py
src/ai_runtime/: __init__.py  agent_case_executor.py  ai_cache_store.py  cache_scope.py  config.py  contracts.py  native_observe.py  payload_compactor.py  playwright_selectors.py  provider.py  selector_registry.py  semantic_terms.py  smart_resolver.py  vision_client.py  vision_resolver.py
src/cli/: common.py  generate_case.py  run_case.py
src/core/mixins/: element_checker.py
src/step_actions/: action_types.py  expression_evaluator.py  flow_control.py  module_handler.py  safe_expression.py  step_executor.py  utils.py
src/step_actions/commands/: assertion_commands.py  misc_commands.py  network_commands.py  storage_commands.py  wait_commands.py  window_commands.py
test_data/ahoh/cases/: dual_active_case_ahoh.yaml  mall_cases.yaml  test_cases.yaml
test_data/ahoh/data/: customer_list.yaml  mall_order.yaml  task.yaml  test_data.yaml
test_data/ahoh/elements/: elements.yaml  mall_element.yaml  task_element.yaml
test_data/ahoh/modules/: create_leads.yaml  create_order.yaml  login.yaml  mall_login.yaml
test_data/ahoh/vars/: car_purchase_policy_test_data.yaml  mall_test_data.yaml  public_test_data.yaml
test_data/assistant/cases/: cases.yaml
test_data/assistant/data/: index_marketing.yaml
test_data/assistant/elements/: elements_marketing.yaml
test_data/assistant/modules/: login.yaml
test_data/car_store_c/cases/: case.yaml
test_data/car_store_c/data/: data.yaml
test_data/car_store_c/elements/: elements.yaml
test_data/car_store_c/modules/: close_popup.yaml  index.yaml
test_data/car_store_c/vars/: data.yaml
test_data/channel_page/data/: index.yaml
test_data/crm_backend/cases/: approval_center.yaml  im_operation_management.yaml  store_management.yaml
test_data/crm_backend/data/: approval_center.yaml  c_client.yaml  im_operation_management.yaml  store_management.yaml
test_data/crm_backend/elements/: approval_center.yaml  c_client.yaml  im_operation_management.yaml  store_management.yaml
test_data/crm_backend/modules/: im_operation_management.yaml  store_management.yaml
test_data/crm_backend/vars/: base.yaml
test_data/crm_store_backend/cases/: case.yaml  case_approval_center.yaml  case_commerceRebate.yaml  case_mall_stores.yaml  case_order.yaml  case_order_policy.yaml  case_own_stores.yaml  case_subtask.yaml  dual_active_case.yaml
test_data/crm_store_backend/data/: data.yaml  data_approval_center.yaml  data_commerceRebate.yaml  data_dcctask.yaml  data_mall_stores.yaml  data_order.yaml  data_order_policy.yaml  data_own_stores.yaml  data_subtask.yaml  lead_mange.yaml
test_data/crm_store_backend/elements/: elements.yaml  elements_approval_center.yaml  elements_commerceRebate.yaml  elements_dcctask.yaml  elements_mall_stores.yaml  elements_order.yaml  elements_order_policy.yaml  elements_own_stores.yaml  (+1 more)
tests/: test_agent_compile_contracts.py  test_agent_completion_contracts.py  test_agent_module_entry_contracts.py  test_agent_runtime_contracts.py  test_framework_contracts.py  test_generation_contracts.py  test_llm_data_boundary.py  test_project_paths_contracts.py  test_runtime_provider_contracts.py  test_selector_registry_contracts.py  test_smart_resolver_contracts.py  test_yaml_schema_contracts.py
utils/: config.py  logger.py  token_usage.py  variable_manager.py  yaml_handler.py
(+52 files in other folders)
