[project]
name = "playwright-ui"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dynamic = ["dependencies"]

[tool.poetry]
package-mode = true
packages = [
  { include = "src" },
  { include = "utils" },
  { include = "page_objects" },
]

[tool.poetry.scripts]
gen = "src.cli.generate_case:cli"
run_case = "src.cli.run_case:cli"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
allure-python-commons = "^2.13.5"
pyyaml = "^6.0.2"
rich = "^13.9.4"
allure-pytest = "^2.13.5"
loguru = "^0.7.3"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
typer = "^0.15.1"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.1"
requests = "^2.32.3"
pytest-reportlog = "^0.4.0"
ruamel-yaml = "^0.18.10"
configobj = "^5.0.9"
pytest-base-url = "^2.1.0"
pytest-dependency = "^0.6.0"
poetry-core = "^2.0.1"
faker = "^37.0.0"
pytest-playwright = "^0.7.0"
pytest-check = "^2.5.0"
black = "^25.1.0"
jsonpath-ng = "^1.7.0"
urllib3 = "^2.5.0"
greenlet = "^3.3.2"
playwright = "^1.58.0"

[[tool.poetry.source]]
name = "my_mirror"
url = "https://mirrors.cernet.edu.cn/pypi/web/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
