[project]
name = "ai-playwright"
version = "0.1.0"
description = "YAML-driven Playwright UI automation framework with optional AI-assisted generation and smart selectors."
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = { text = "MIT" }
authors = [
  { name = "AI Playwright contributors" },
]
keywords = ["playwright", "pytest", "ui-automation", "yaml", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Testing :: Acceptance",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/liyanqing90/ai-playwright"
Repository = "https://github.com/liyanqing90/ai-playwright"
Issues = "https://github.com/liyanqing90/ai-playwright/issues"

[project.scripts]
gen = "ai_playwright.cli.generate_case:cli"
run_case = "ai_playwright.cli.run_case:cli"
ai-playwright-init = "ai_playwright.cli.init_project:cli"

[tool.poetry]
package-mode = true
packages = [
  { include = "ai_playwright" },
]
include = [
  { path = "ai_playwright/templates/config/**/*", format = ["sdist", "wheel"] },
  { path = "test_data/demo/**/*", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
pytest = "^8.3.4"
allure-python-commons = "^2.13.5"
rich = "^13.9.4"
allure-pytest = "^2.13.5"
loguru = "^0.7.3"
typer = "^0.15.1"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.1"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
pytest-reportlog = "^0.4.0"
ruamel-yaml = "^0.18.10"
pytest-base-url = "^2.1.0"
pytest-dependency = "^0.6.0"
faker = "^37.0.0"
pytest-playwright = "^0.7.0"
pytest-check = "^2.5.0"
jsonpath-ng = "^1.7.0"
playwright = "^1.58.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
