[project]
name = "ai-playwright"
version = "0.1.0"
description = "YAML-driven Playwright UI automation framework with optional AI-assisted generation and smart selectors."
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = "Apache-2.0"
authors = [
  { name = "AI Playwright contributors" },
]
keywords = ["playwright", "pytest", "ui-automation", "yaml", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Testing :: Acceptance",
]
dependencies = [
  "pytest>=8.3.4,<9.0.0",
  "allure-python-commons>=2.13.5,<3.0.0",
  "rich>=13.9.4,<14.0.0",
  "allure-pytest>=2.13.5,<3.0.0",
  "loguru>=0.7.3,<0.8.0",
  "typer>=0.15.1,<0.16.0",
  "pydantic>=2.10.4,<3.0.0",
  "pydantic-settings>=2.7.1,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "requests>=2.32.3,<3.0.0",
  "pytest-reportlog>=0.4.0,<0.5.0",
  "ruamel-yaml>=0.18.10,<0.19.0",
  "pytest-base-url>=2.1.0,<3.0.0",
  "pytest-dependency>=0.6.0,<0.7.0",
  "faker>=37.0.0,<38.0.0",
  "pytest-playwright>=0.7.0,<0.8.0",
  "pytest-check>=2.5.0,<3.0.0",
  "jsonpath-ng>=1.7.0,<2.0.0",
  "playwright>=1.58.0,<2.0.0",
  "configobj>=5.0.9,<6.0.0",
]

[project.urls]
Homepage = "https://github.com/liyanqing90/ai-playwright-framework"
Repository = "https://github.com/liyanqing90/ai-playwright-framework"
Issues = "https://github.com/liyanqing90/ai-playwright-framework/issues"

[project.scripts]
gen = "ai_playwright.cli.generate_case:cli"
run_case = "ai_playwright.cli.run_case:cli"
ai-playwright-init = "ai_playwright.cli.init_project:cli"
ai-playwright-install-browser = "ai_playwright.cli.install_browser:main"

[dependency-groups]
dev = [
  "black>=25.1.0,<26.0.0",
]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[[tool.uv.index]]
name = "tuna"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_playwright*"]
namespaces = true

[tool.setuptools.package-data]
ai_playwright = ["templates/**/*"]

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"
